V4L2 unsupported control types
At least bitmask, 64-bits integer and string controls are not supported. They can easily be tested with the test device ("modprobe vivi").
At least bitmask, 64-bits integer and string controls are not supported. They can easily be tested with the test device ("modprobe vivi").
VideoLAN code repository instance