V4L2: add bitmask controls (refs #5302)